# mlops_cookiecutter_exercise

./: .gitignore  README.md  evaluate.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py  train.dockerfile
.github/workflows/: codecheck.yaml  tests.yaml
models/: model.pth
src/cookiecutter_mlops_m6/: data.py  evaluate.py  main.py  model.py  train.py  visualize.py
src/cookiecutter_mlops_m6_archive/: .gitignore  data.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_training.py
